--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 deep-translator==1.11.4
 distro==1.9.0
+docopt==0.6.2
 docstring_parser==0.17.0
 filetype==1.2.0
 frozenlist==1.7.0
@@ -17,13 +18,13 @@ h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
 httpcore==1.0.9
-httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 jiter==0.11.0
 multidict==6.6.4
 pillow==11.3.0
 pip_system_certs==5.2
+pipreqs==0.4.13
 propcache==0.3.2
 pydantic==2.11.9
 pydantic_core==2.33.2
@@ -35,4 +36,5 @@ soupsieve==2.8
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
+yarg==0.1.10
 yarl==1.20.1
